最新修改，重新创建两个目录
修改了不能登陆的情况，setting写入了代码和路由，重新创建了两个目录，实现了代码和后台路由等方式的链接

--- a/www/views/Home/Home.html
+++ b/www/views/Home/Home.html
@@ -20,17 +20,17 @@
       </div>
       <div class="row row-no-padding quick-actions">
       <div class="col col-25 col-border quick-action-item">
-        <a class="tab-item shortcut" href="">
+        <a class="tab-item shortcut" ui-sref="app.shop">
           <i class="icon ion-ios-briefcase-outline energized">
           </i>
           <h5>新增商品</h5>
         </a>
       </div>
         <div class="col col-25 col-border quick-action-item">
-          <a class="tab-item shortcut" href="">
+          <a class="tab-item shortcut" ui-sref="app.product-add">
             <i class="icon ion-filing royal">
             </i>
-            <h5>新增会员</h5>
+            <h5>添加商品</h5>
           </a>
         </div>
         <div class="col col-25 col-border quick-action-item">
