--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -58,7 +58,7 @@
       </ul>
     </ion-content>
     <div style="position: fixed; bottom: 10px; left: 10px; z-index: 100;">
-      <a class="button button-light button-clear icon-left ion-android-settings" href="">&nbsp;&nbsp;设置</a>
+      <a class="button button-light button-clear icon-left ion-android-settings" ui-sref="app.setting">&nbsp;&nbsp;设置</a>
     </div>
   </ion-side-menu>
 </ion-side-menus>
