最新修改，完成最终项目
10-19

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9856,5 +9856,9 @@ a.button {
   float: left; }
 
 .category-content-right, .category-content-right-footer {
-  width: 60%;
-  margin-left: 40%; }
+  width: 50%;
+  margin-left: 50%; }
+
+.active-item {
+  background-color: #fff;
+  border-left: 4px solid #FF6A3C; }
