--- a/www/views/Home/Home.html
+++ b/www/views/Home/Home.html
@@ -1,11 +1,11 @@
 <ion-view view-title="首页">
   <ion-content>
-<img class="full-image"  src="/views/Home/image/androidbanner.png" alt="">
+    <img class="full-image"  src="views/Home/image/androidbanner.png" alt="">
     <div class="row padding-left stable-bg">
       <div class="col stable-bg">
         <h6>今天</h6>
         <p class="income">50.00<span class="yuan">元</span></p>
-          <p>比昨天：<s0an class="balanced">-2.00</s0an><i class="icon ion-arrow-right-a balanced"></i></p>
+        <p>比昨天：<s0an class="balanced">-2.00</s0an><i class="icon ion-arrow-right-a balanced"></i></p>
       </div>
       <div class="col stable-bg">
         <h6>本周周报表</h6>
@@ -17,8 +17,8 @@
         <p class="income">300.00<span class="yuan">元</span></p>
         <p>同期：420.00<i class="icon ion-arrow-up-a assertive"></i></p>
       </div>
-      </div>
-      <div class="row row-no-padding quick-actions">
+    </div>
+    <div class="row row-no-padding quick-actions">
       <div class="col col-25 col-border quick-action-item">
         <a class="tab-item shortcut" ui-sref="app.shop">
           <i class="icon ion-ios-briefcase-outline energized">
@@ -26,34 +26,34 @@
           <h5>新增商品</h5>
         </a>
       </div>
-        <div class="col col-25 col-border quick-action-item">
-          <a class="tab-item shortcut" ui-sref="app.product-add">
-            <i class="icon ion-filing royal">
-            </i>
-            <h5>添加商品</h5>
-          </a>
-        </div>
-        <div class="col col-25 col-border quick-action-item">
-          <a class="tab-item shortcut" href="">
-            <i class="icon ion-calculator assertive">
-            </i>
-            <h5>收银记账</h5>
-          </a>
-        </div>
-        <div class="col col-25 col-border quick-action-item">
-          <a class="tab-item shortcut" href="">
-            <i class="icon ion-xbox balanced">
-            </i>
-            <h5>支出管理</h5>
-          </a>
-        </div>
+      <div class="col col-25 col-border quick-action-item">
+        <a class="tab-item shortcut" ui-sref="app.product-add">
+          <i class="icon ion-filing royal">
+          </i>
+          <h5>添加商品</h5>
+        </a>
+      </div>
+      <div class="col col-25 col-border quick-action-item">
+        <a class="tab-item shortcut"ui-sref="app.product-list">
+          <i class="icon ion-grid energized">
+          </i>
+          <h5>商品管理</h5>
+        </a>
+      </div>
+      <div class="col col-25 col-border quick-action-item">
+        <a class="tab-item shortcut" href="">
+          <i class="icon ion-xbox balanced">
+          </i>
+          <h5>支出管理</h5>
+        </a>
+      </div>
     </div>
     <div class="row row-no-padding quick-actions">
       <div class="col col-25 col-border quick-action-item">
         <a class="tab-item shortcut" href="">
-          <i class="icon ion-grid energized">
+          <i class="icon ion-calculator assertive">
           </i>
-          <h5>商品管理</h5>
+          <h5>收银记账</h5>
         </a>
       </div>
       <div class="col col-25 col-border quick-action-item">
