--- a/www/views/category/category-list.scss
+++ b/www/views/category/category-list.scss
@@ -1,8 +1,12 @@
 .category-content-left{
   width: 40%;
-  float: left;
+  float:left;
 }
 .category-content-right,.category-content-right-footer{
-  width: 60%;
-  margin-left: 40%;
+  width:50%;
+  margin-left:50% ;
+}
+.active-item{
+  background-color: $light;
+  border-left: 4px solid $energized;
 }
