--- a/www/views/setting/setting.html
+++ b/www/views/setting/setting.html
@@ -1,36 +1,39 @@
-<ion-view view-title="店鋪設置">
+<ion-view view-title="店铺设置">
   <ion-nav-buttons side="left">
-    <a class="button button-clear button-icon ion-ios-arrow-back" ng-click="goBack()"></a>
-  </ion-nav-buttons>
+    <a class="button button-clear button-icon ion-ios-arrow-back"ng-click="goBack()"></a>
+    </ion-nav-buttons>
   <ion-content>
     <div class="list list-inset">
-      <a class="item item-icon-right" ui-sref="app.shop-edit">
+      <a class="item item-icon-right" ui-sref="app.shop">
         店铺设置
         <i class="icon ion-chevron-right icon-accessory"></i>
-      </a>
-      <a class="item item-icon-right" ui-sref="change-password">
-        密码修改
+        </a>
+      <a class="item item-icon-right" ui-sref="app.change-password">
+      密码
         <i class="icon ion-chevron-right icon-accessory"></i>
       </a>
-    </div>
+      </div>
+
     <div class="list list-inset">
       <a class="item item-icon-right">
-      联系客服
-        <span class="item-note">{{shop.shopPhone}}</span>
+        关于我们
         <i class="icon ion-chevron-right icon-accessory"></i>
       </a>
       <a class="item item-icon-right">
-       当前版本
-        <span class="item-note">1.0.0</span>
+        联系客服：243885545
         <i class="icon ion-chevron-right icon-accessory"></i>
       </a>
       <a class="item item-icon-right">
-       关于我们
+        版本号：1.9.2
         <i class="icon ion-chevron-right icon-accessory"></i>
       </a>
     </div>
+
     <div class="list list-inset">
-      <button class="button button-energized button-block">帐号退出</button>
+      <a class="item item-icon-right" ng-click="login()">
+        安全退出
+        <i class="icon ion-chevron-right icon-accessory"></i>
+      </a>
     </div>
-  </ion-content>
+    </ion-content>
 </ion-view>
