--- a/www/views/welcome/welcome.html
+++ b/www/views/welcome/welcome.html
@@ -2,22 +2,22 @@
   <ion-content>
     <ion-slide-box show-pager="false">
       <ion-slide>
-        <img class="full-image" src="/views/welcome/image/001.jpg" alt="">
+        <img class="full-image" src="views/welcome/image/001.jpg" alt="">
+        </ion-slide>
+      <ion-slide>
+        <img class="full-image" src="views/welcome/image/002.jpg" alt="">
       </ion-slide>
       <ion-slide>
-        <img class="full-image" src="/views/welcome/image/002.jpg" alt="">
+        <img class="full-image" src="views/welcome/image/003.jpg" alt="">
       </ion-slide>
-      <ion-slide>
-        <img class="full-image" src="/views/welcome/image/003.jpg" alt="">
-      </ion-slide>
-    </ion-slide-box>
-    <div class="row padding-left padding-right" style="position: absolute; button:10px;" ui-sref="login" href="#/login">
+      </ion-slide-box>
+    <div class="row padding-left padding-right" style="position: absolute; button:10px;">
       <div class="col padding-left padding-right">
-        <a class="button button-outline button-energized  button-block">登录</a>
-      </div>
+        <a class="button button-outline button-energized  button-block" ui-sref="login">登录</a>
+        </div>
       <div class="col padding-left padding-right">
         <a class="button button-energized  button-block">注册</a>
       </div>
-    </div>
+      </div>
   </ion-content>
 </ion-view>
